<resources>
    <string name="app_name">CrowdIntelligence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="image_view">image_view</string>
    <string name="password">Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="abba">abba</string>
    <string name="saif_username">Saif_userName</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="answer">Answer</string>
    <string name="view_ans">View Ans</string>
    <string name="post_your_question">Post your Question</string>
</resources>