<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Edit_profile_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout

                android:id="@+id/midcontainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/image_view_profile"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:background="@drawable/border"
                        android:contentDescription="@string/image_view"
                        android:scaleType="fitXY"
                        android:src="@drawable/baseline_profile_24" />

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:hint="Name"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_text_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:hint="@string/contact"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="13"
                    android:minHeight="48dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:autofillHints="1234" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:minHeight="48dp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:autofillHints="password" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/midcontainer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:elevation="100dp"
                android:text="@string/save_changes"
                android:textSize="24sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>